--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  letter-spacing: 1px;
 }
 
 body{
      width: 100vw;
      min-height: 100vh;
-     background-image: linear-gradient(to bottom, #121111, #111010, #110f10, #0f0e0f, #0e0d0f, #19181a, #222224, #2b2c2f, #424548, #5a6063, #747c7e, #909999);
+     background-color: rgb(24 24 27);
 }
